[package]
name = "flowfield"
version = "0.1.0"
edition = "2021"
description = "balls in a vector field"

[dependencies]
anyhow = "1.0.86"
macroquad = { version = "0.4", features = ["audio"] }
noise = "0.9"
reqwest = { version = "0.12.5", features = ["blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"

[package.metadata.bundle]
name = "flowfield"
icon = ["256x256.png"]
identifier = "xyz.reeceyang.flowfield"
version = "1.0.0"
copyright = "Copyright (c) Reece Yang 2024. All rights reserved."
category = "Game"